fixed quiz layout issue

--- a/css/quiz.css
+++ b/css/quiz.css
@@ -49,7 +49,6 @@ p {
 }
 
 .lightbox-content {
-    position: relative;
     display: flex;
     flex-direction: column; /* Stack items vertically */
     background-color:#c3c3de;
@@ -57,8 +56,8 @@ p {
     align-items: center;
     padding: 30px;
     border-radius: 20px;
-    width: 80vw;
-    height: 80vh;
+    width: 120vh;
+    height: auto;
 
  /* Add paper texture */
 
@@ -75,7 +74,7 @@ p {
 /* Quiz Options container */
 .quiz-options {
     display: flex;
-    margin-top: 10px;
+    margin-top: px;
     justify-content: space-around;
 }
 
@@ -84,7 +83,8 @@ p {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    margin-top: -20px;
+    margin: none;
+  
 }
 /* hide the radio buttons */
 .quiz-option input {
@@ -92,9 +92,10 @@ p {
 }
 
 .animal-icon {
-    width: 60%;
+    width: 70%;
     cursor: pointer;
     justify-content: space-evenly;
+    margin-bottom: none;
     align-items: center;
     transition: transform 0.2s ease-in-out, filter 0.2s;
 }
@@ -110,7 +111,6 @@ p {
     width: 15%;
     display: block; /* Make the button a block element */
     margin: auto;
-    margin-top: 30px;
     border: none; /* Remove the default border */
     cursor: pointer; /* Show pointer on hover */
     transition: background-color 0.3s ease, transform 0.2s ease; /* Add smooth transitions */
@@ -137,7 +137,7 @@ p {
     width: 15%;
     display: block; /* Make the button a block element */
     margin: auto;
-    margin-top: 30px;
+    margin-top: 0px;
     border: none; /* Remove the default border */
     cursor: pointer; /* Show pointer on hover */
     transition: background-color 0.3s ease, transform 0.2s ease; /* Add smooth transitions */
@@ -166,16 +166,15 @@ p {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-bottom: -20px;
+    margin-bottom: auto;
     z-index: 2000; /* Ensures the gallery is on top of the lightbox */
 }
 
 /* Gallery Image Section */
 .gallery-images {
     display: flex;
-    overflow-x: auto;
     width: 100%;
-    gap: 10px;
+    gap: 100px;
     z-index: 1050;
 }
 
